<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.geoserver.acl</groupId>
    <artifactId>gs-acl</artifactId>
    <version>${revision}</version>
  </parent>
  <groupId>org.geoserver.acl.plugin</groupId>
  <artifactId>plugin</artifactId>
  <packaging>pom</packaging>
  <description>GeoServer Acess Control Lists based authorization GeoServer plugin components</description>
  <modules>
    <module>client</module>
    <module>accessmanager</module>
    <module>web</module>
    <module>wps</module>
    <module>config</module>
    <module>plugin</module>
  </modules>
  <properties>
    <java.version>17</java.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.geoserver.acl.plugin</groupId>
        <artifactId>gs-acl-plugin-accessmanager</artifactId>
        <version>${project.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver</groupId>
        <artifactId>gs-main</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver</groupId>
        <artifactId>gs-wms</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver</groupId>
        <artifactId>gs-wms</artifactId>
        <version>${gs.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver</groupId>
        <artifactId>gs-wfs</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver</groupId>
        <artifactId>gs-restconfig</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver.web</groupId>
        <artifactId>gs-web-core</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver.web</groupId>
        <artifactId>gs-web-sec-core</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver.web</groupId>
        <artifactId>gs-web-core</artifactId>
        <version>${gs.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver.extension</groupId>
        <artifactId>gs-wps-core</artifactId>
        <version>${gs.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver.extension</groupId>
        <artifactId>gs-wps-core</artifactId>
        <version>${gs.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <!-- need access to WMTSLayerTest.class -->
        <groupId>org.geoserver</groupId>
        <artifactId>gs-restconfig</artifactId>
        <version>${gs.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.geoserver</groupId>
        <artifactId>gs-main</artifactId>
        <version>${gs.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>xmlunit</groupId>
        <artifactId>xmlunit</artifactId>
        <version>1.6</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>1.17.1</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <!-- AuthorizationServiceImpl, only for tests, the compile scope dependency is only on the api module-->
      <groupId>org.geoserver.acl</groupId>
      <artifactId>gs-acl-authorization</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.geoserver.acl.integration</groupId>
      <artifactId>gs-acl-domain-spring-integration</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- to use MemoryRuleRepository in tests -->
      <groupId>org.geoserver.acl.domain</groupId>
      <artifactId>gs-acl-accessrules</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- to use MemoryAdminRuleRepository in tests -->
      <groupId>org.geoserver.acl.domain</groupId>
      <artifactId>gs-acl-adminrules</artifactId>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <profiles>
    <profile>
      <id>gs_dev</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <gs.version>2.28-SNAPSHOT</gs.version>
        <gt.version>34-SNAPSHOT</gt.version>
      </properties>
    </profile>
    <profile>
      <id>gs_stable</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <gs.version>2.27.2</gs.version>
        <gt.version>33.2</gt.version>
        <wicket.version>9.21.0</wicket.version>
      </properties>
    </profile>
  </profiles>
</project>
